--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="https://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com</groupId>
@@ -69,7 +69,7 @@
 							<configuration>
 								<!-- Your configuration options here -->
 								<suiteXmlFiles>
-									<suiteXmlFile>TestNG_XMLs/testng.xml</suiteXmlFile>
+									<suiteXmlFile>testng_xml/purchase-order.xml</suiteXmlFile>
 								</suiteXmlFiles>
 							</configuration>
 						</plugin>
@@ -90,7 +90,7 @@
 							<version>3.2.5</version>
 							<configuration>
 								<suiteXmlFiles>
-									<suiteXmlFile>TestNG_XMLs/testng.xml</suiteXmlFile>
+									<suiteXmlFile>testng_xml/error-validation.xml</suiteXmlFile>
 								</suiteXmlFiles>
 							</configuration>
 						</plugin>
